improved tests + minor changes